quick fix for homepage alignment issue

--- a/web/static/css/hero.scss
+++ b/web/static/css/hero.scss
@@ -36,6 +36,7 @@ section.hero {
     
     .btn-wrap {
         margin-top: 32px;
+        text-align: center;
     }
         
 }
