--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -165,7 +165,8 @@ section.hero {
       font-weight: 100;
       font-style: italic; }
   section.hero .btn-wrap {
-    margin-top: 32px; }
+    margin-top: 32px;
+    text-align: center; }
 
 @media screen and (min-width: 768px) {
   section.hero {
